# ghost-labs-ladder-script

./: .gitignore  BIP-READINESS-AUDIT.md  README.md  ghost-labs.html  index.html
deploy/: DEPLOY.md  deploy-ladder-script.sh  nginx-ladder-script.conf
docs/: BIP-XXXX-review-prep.md  BIP-XXXX.md  BIP-YYYY-review-prep.md  BIP-YYYY.md  BLOCK_LIBRARY.md  BLOCK_LIBRARY_IMPL.md  BUILD_PROMPT.md  DIFF_WITNESS_PLAN.md  ENGINE_GUIDE.md  EXAMPLES.md  FAQ.md  GLOSSARY.md  IMPLEMENTATION_NOTES.md  INTEGRATION.md  INTRODUCTION.md  LADDER_SCRIPT_SCENARIOS.md  MERKLE-UTXO-SPEC.md  MUSIG_THRESHOLD_PLAN.md  POSSIBILITIES.md  QABIO.md  README.md  RELAY_PLAN.md  REVIEW_GUIDE.md  SOFT_FORK_GUIDE.md  SPECIFICATION.md  SUMMARY.md  TX_MLSC_SPEC.md  WHITEPAPER.md  mlsc-explainer.html
patches/: bitcoin-core-v30-ladder-script.patch
proxy/: deploy.sh  ladder-proxy.service  ladder_proxy.py  test_proxy.py
scripts/: build.sh  deploy.sh
spec/: LadderAntiSpam.cfg  LadderAntiSpam.tla  LadderBlockEval.cfg  LadderBlockEval.tla  LadderComposition.cfg  LadderComposition.tla  LadderCovenant.cfg  LadderCovenant.tla  LadderCrossInput.cfg  LadderCrossInput.tla  LadderEval.cfg  LadderEval.tla  LadderEvalCheck.cfg  LadderEvalCheck.tla  LadderMerkle.cfg  LadderMerkle.tla  LadderSighash.cfg  LadderSighash.tla  (+2 more)
src/rung/: CMakeLists.txt  adaptor.cpp  adaptor.h  aggregate.cpp  aggregate.h  conditions.cpp  conditions.h  descriptor.cpp  descriptor.h  evaluator.cpp  evaluator.h  policy.cpp  policy.h  pq_verify.cpp  pq_verify.h  rpc.cpp  serialize.cpp  serialize.h  sighash.cpp  sighash.h  types.cpp  types.h
(+216 files in other folders)
